# VideoCapture

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: solution.html
qml/: Main.qml
qml/components/: ControlButton.qml  CropControls.qml  CropEdgeSlider.qml  CropMap.qml  NumericSpinBox.qml  RecordButton.qml  RecordingTimerPill.qml  StatusBar.qml  StatusChip.qml  VideoPanel.qml  WindowSelector.qml
src/: main.cpp
src/app/: CaptureController.cpp  CaptureController.h  CaptureControllerCommands.cpp  CaptureControllerCrop.cpp  CaptureControllerState.cpp  CaptureFormatting.cpp  CaptureFormatting.h  CapturePipelineWorker.cpp  CapturePipelineWorker.h  CropRectValidator.cpp  CropRectValidator.h  WindowListModelBuilder.cpp  WindowListModelBuilder.h  WindowRefreshWorker.cpp  WindowRefreshWorker.h
src/capture/: CaptureFrameMonitor.cpp  CaptureFrameMonitor.h  CaptureSettings.cpp  CaptureSettings.h  FrameStats.cpp  FrameStats.h  GStreamerCapturePipeline.cpp  GStreamerCapturePipeline.h  GStreamerCapturePipelineBuilder.cpp  GStreamerCapturePipelineBuilder.h  GStreamerCapturePipelineBus.cpp  GStreamerCapturePipelineLifecycle.cpp  VideoContentDetector.cpp  VideoContentDetector.h  VideoFrame.h
src/capture/x11/: X11WindowClassifier.cpp  X11WindowClassifier.h  X11WindowFinder.cpp  X11WindowFinder.h  X11WindowInfo.h  X11WindowPropertyReader.cpp  X11WindowPropertyReader.h
src/config/: VideoCaptureConstants.h
src/gstreamer/: GStreamerRuntime.cpp  GStreamerRuntime.h
src/recording/: GStreamerFrameWriter.cpp  GStreamerFrameWriter.h  GStreamerRecordingFinalizer.cpp  GStreamerRecordingFinalizer.h  GStreamerRecordingPipelineBuilder.cpp  GStreamerRecordingPipelineBuilder.h  RecordingSettings.h  VideoRecorder.cpp  VideoRecorder.h  VideoRecorderLifecycle.cpp
src/ui/: VideoFrameProvider.cpp  VideoFrameProvider.h  VideoPreviewItem.cpp  VideoPreviewItem.h
src/utils/: FileNameUtils.cpp  FileNameUtils.h  Logging.cpp  Logging.h
tests/: RecorderSmokeTest.cpp
